--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,10 @@
 .dataframe td:first-child {
   display: none;
 }
+
+div.element-container.css-hnmf2q.e1tzin5v3 {
+    background-color: #9CAF88;
+    border: 2px solid #336600;
+    padding: 5% 5% 5% 10%;
+    border-radius: 5px;
+}
